--- a/src/static/css/libs/_vars.scss
+++ b/src/static/css/libs/_vars.scss
@@ -34,7 +34,7 @@
 // Palette.
 	$palette: (
 		bg:							#ffffff,
-		bg-alt:						#f4f4f4,
+		bg-alt:						#dfeded,
 		fg:							#646464,
 		fg-bold:					#3c3b3b,
 		fg-light:					#aaaaaa,
