Website refresh, pre-Columbia

--- a/src/static/css/libs/_vars.scss
+++ b/src/static/css/libs/_vars.scss
@@ -34,7 +34,7 @@
 // Palette.
 	$palette: (
 		bg:							#ffffff,
-		bg-alt:						#dfeded,
+		bg-alt:						#e1f0fa,
 		fg:							#646464,
 		fg-bold:					#3c3b3b,
 		fg-light:					#aaaaaa,
@@ -43,3 +43,16 @@
 		border-alt:					rgba(160,160,160,0.65),
 		accent:						#2e59ba
 	);
+
+	// Old Palette.
+	// $palette: (
+	// 	bg:							#ffffff,
+	// 	bg-alt:						#dfeded,
+	// 	fg:							#646464,
+	// 	fg-bold:					#3c3b3b,
+	// 	fg-light:					#aaaaaa,
+	// 	border:						rgba(160,160,160,0.3),
+	// 	border-bg:					rgba(160,160,160,0.075),
+	// 	border-alt:					rgba(160,160,160,0.65),
+	// 	accent:						#2e59ba
+	// );
